--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Sideways Manner is bi-weekly publishing platform that documents the current activities, research and writing
   by students of the MA graphic design program at the Estonian College of Arts in Tallinn, Estonia.
-baseurl: "https://eka-gd-ma.github.io/" # the subpath of your site, e.g. /blog
+baseurl: "https://eka-gd-ma.github.io/sideways-manner/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:
